--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -1,5 +1,6 @@
 ---
 import Navbar from "../components/Navbar.astro";
+const { pageTitle } = Astro.props;
 ---
 
 <html lang="en">
@@ -8,11 +9,12 @@ import Navbar from "../components/Navbar.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>{pageTitle}</title>
   </head>
   <body>
     <Navbar />
-    <h1>Astro</h1>
+    <h1>{pageTitle}</h1>
+    <slot />
   </body>
 </html>
 
@@ -21,5 +23,4 @@ import Navbar from "../components/Navbar.astro";
     background-color: #292524;
     color: white;
   }
- 
 </style>
