--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,8 @@
 ---
 import BaseLayout from "../Layouts/BaseLayout.astro";
+const pageTitle = "home";
 ---
 
-<BaseLayout/>
+<BaseLayout pageTitle={pageTitle}>
+  <p>hello, i am slotted from index.astro</p>
+</BaseLayout>
