--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,7 +1,7 @@
 <div>
-<a href="#">one</a>
-<a href="#">two</a>
-<a href="#">three</a>
+<a href="/">Home</a>
+<a href="/about/">About</a>
+<a href="/blog">Blog</a>
 </div>
 
 
