--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,6 @@
 ---
 import BaseLayout from "../Layouts/BaseLayout.astro";
-const pageTitle = "home";
+const pageTitle = "Home";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
