--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,28 +1,33 @@
+---
+
+---
+
 <div>
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog">Blog</a>
+  <a href="/">Home</a>
+  <a href="/about/">About</a>
+  <a href="/blog">Blog</a>
 </div>
 
-
-
 <style>
-  
-div{
-  width:100%;
-  height:40px;
-  border: 1px solid black;
-}
-a:link {
+  div {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 50%;
+    height: 40px;
+    
+  }
+
+
+  a:link {
     color: white;
     text-decoration: none;
   }
-   a:visited {
+  a:visited {
     color: white;
   }
-  a:hover{
-    color:rgb(252 165 165);
+  a:hover {
+    color: rgb(252 165 165);
     text-decoration: underline;
   }
-
 </style>
