--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import Header from "../components/Header.astro";
 const { pageTitle } = Astro.props;
 ---
 
@@ -12,7 +13,7 @@ const { pageTitle } = Astro.props;
   </head>
 
   <body>
-    
+    <Header/>
     <h1>{pageTitle}</h1>
     <slot />
   </body>
