added Font, centered contents

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -11,14 +11,16 @@
 <style>
   div {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: flex-end;
     align-items: center;
     width: 50%;
     height: 40px;
     
   }
 
-
+  a{
+    margin-left: 1rem;
+  }
   a:link {
     color: white;
     text-decoration: none;
