--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -1,4 +1,5 @@
 ---
+import "../styles/global.css";
 import Header from "../components/Header.astro";
 const { pageTitle } = Astro.props;
 ---
@@ -13,15 +14,22 @@ const { pageTitle } = Astro.props;
   </head>
 
   <body>
-    <Header/>
-    <h1>{pageTitle}</h1>
-    <slot />
+    <Header />
+    <div>
+      <h1>{pageTitle}</h1>
+      <slot /></div>
+  
   </body>
 </html>
 
 <style>
   body {
+    
     background-color: #292524;
     color: white;
+  }
+  div{
+    max-width: 50%;
+    margin:0 auto;
   }
 </style>
