--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,12 +3,15 @@ import Nav from "./Nav.astro";
 ---
 
 <div>
-  <Nav/>
+  <Nav />
 </div>
-  
+
 <style>
-  div{
-    display:flex;
+  div {
+    font-size: 1.25rem;
+    font-style: oblique;
+    font-weight: 900;
+    display: flex;
     justify-content: center;
 
     margin-top: 5rem;
