post layout and post 1.md created

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,5 +5,7 @@ const pageTitle = "Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>hello im slotted from blog.astro!</p>
+  <p>Here you'll find links to each post:</p>
+  <a href="/posts/post-1">post 1!</a>
 </BaseLayout>
+
