created blogCard component

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -29,7 +29,7 @@
     color: white;
   }
   a:hover {
-    color: rgb(252 165 165);
+    color: #fca5a5;
     text-decoration: underline;
   }
 </style>
