--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,13 +1,17 @@
 ---
 import BaseLayout from "../Layouts/BaseLayout.astro";
 import BlogCard from "../components/BlogCard.astro";
+const allPosts = await Astro.glob('../pages/posts/*.md')
 const pageTitle = "Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <p>Here you'll find links to each post:</p>
-  <BlogCard/>
+  <ul>
+    {allPosts.map((post) => <BlogCard url={post.url} title={post.frontmatter.title} pubDate={post.frontmatter.pubDate} description = {post.frontmatter.description} />)}
+  </ul>
+  
 
-  <!-- <a href="/posts/post-1">post 1!</a> -->
+  
 </BaseLayout>
 
