--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -4,5 +4,7 @@ const pageTitle = "About";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>hello im slotted from about.astro</p>
+  <p>This is where you will learn about ya boi charles
+
+  </p>
 </BaseLayout>
