--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,5 +4,5 @@ const pageTitle = "Home";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <p>hello, i am slotted from index.astro</p>
+  <p>hello, this is ya home! </p>
 </BaseLayout>
