--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 const { pageTitle } = Astro.props;
 ---
 
@@ -17,17 +18,15 @@ const { pageTitle } = Astro.props;
     <Header />
     <div>
       <h1>{pageTitle}</h1>
-      <slot /></div>
-  
+      <slot />
+    </div>
+    <Footer/>
   </body>
 </html>
 
 <style>
-
-  div{
+  div {
     max-width: 50%;
-    margin:0 auto;
+    margin: 0 auto;
   }
-
-
 </style>
