fixed social links added styles to footer

--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -1,19 +1,31 @@
 ---
 ---
 
-<ul>
-  <li>
-    <a href="instagram.com/astro.glob">Instagram</a>
-    <a href="github.com/vlCodes17">GitHub</a>
-  </li>
-</ul>
+<div>
+  <ul>
+    <li>
+      <a href="https://instagram.com/astro.glob">Instagram</a>
+      <a href="https://github.com/vlCodes17">GitHub</a>
+    </li>
+  </ul>
+</div>
 
 <style>
+
+  div {
+    display: flex;
+    
+    align-items: center;
+    width: 50%;
+    height: 40px;
+  }
+
   ul {
     list-style: none;
   }
   a {
     margin-left: 1rem;
+    
   }
   a:link {
     color: white;
@@ -22,8 +34,10 @@
   a:visited {
     color: white;
   }
+
   a:hover {
     color: #fca5a5;
     text-decoration: underline;
   }
+
 </style>
