--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,12 +8,12 @@ import Nav from "./Nav.astro";
 
 <style>
   div {
+    width: 100%;
     font-size: 1.25rem;
     font-style: oblique;
     font-weight: 900;
     display: flex;
     justify-content: center;
-
     margin-top: 5rem;
     margin-bottom: 5rem;
   }
