fixed baselayou margins and footer spacing

--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -28,5 +28,7 @@ const { pageTitle } = Astro.props;
   div {
     max-width: 50%;
     margin: 0 auto;
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
 </style>
