--- a/src/components/Socials.astro
+++ b/src/components/Socials.astro
@@ -2,29 +2,24 @@
 ---
 
 <div>
-  <ul>
-    <li>
-      <a href="https://instagram.com/astro.glob">Instagram</a>
-      <a href="https://github.com/vlCodes17">GitHub</a>
-    </li>
-  </ul>
+  <a href="https://instagram.com/astro.glob">Instagram</a>
+  <a href="https://github.com/vlCodes17">GitHub</a>
 </div>
 
 <style>
-
   div {
     display: flex;
-    
+    justify-content: center;
+    gap: 3rem; 
     align-items: center;
     width: 50%;
     height: 40px;
   }
 
-  ul {
-    list-style: none;
-  }
+
+  
+
   a {
-    margin-left: 1rem;
     
   }
   a:link {
@@ -39,5 +34,4 @@
     color: #fca5a5;
     text-decoration: underline;
   }
-
 </style>
