--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-
+import "../styles/global.css"
 ---
 
 <div>
@@ -22,14 +22,14 @@
     margin-left: 1rem;
   }
   a:link {
-    color: white;
+    color: var(--eggshell);
     text-decoration: none;
   }
   a:visited {
-    color: white;
+    color: var(--eggshell);
   }
   a:hover {
-    color: #fca5a5;
+    color: var(--spanish-gray-hover);
     text-decoration: underline;
   }
 </style>
