--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -25,10 +25,12 @@ const { pageTitle } = Astro.props;
 </html>
 
 <style>
+  body{
+    
+  }
   div {
     max-width: 50%;
     margin: 0 auto;
-    padding-left: 5rem;
-    padding-right: 5rem;
+    
   }
 </style>
