added border style, fixed some spacing

--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -26,7 +26,8 @@ const { pageTitle } = Astro.props;
 
 <style>
   body{
-    
+    border:5px solid var(--spanish-gray);
+    margin: 4rem;
   }
   div {
     max-width: 50%;
