--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,13 +8,13 @@ import Nav from "./Nav.astro";
 
 <style>
   div {
+    border-bottom: 5px solid var(--spanish-gray);
     width: 100%;
     font-size: 1.25rem;
     font-style: oblique;
     font-weight: 900;
     display: flex;
     justify-content: center;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    padding: 3rem;
   }
 </style>
