--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,13 +8,12 @@ import Socials from "./Socials.astro";
 
 <style>
   div {
+    border-top: 5px solid var(--spanish-gray);
     font-size: 1.25rem;
     font-style: oblique;
     font-weight: 900;
     display: flex;
     justify-content: center;
-    margin-top: 5rem;
-    margin-bottom: 5rem;
+    padding: 2rem;
   }
-  
 </style>
