changed nav styles, fontsize, spacing

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css"
+import "../styles/global.css";
 ---
 
 <div>
@@ -13,9 +13,9 @@ import "../styles/global.css"
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    width: 50%;
-    height: 40px;
-    
+    width: 100%;
   }
-
+  a{
+    margin-left: 2rem;
+  }
 </style>
