added some margins to baseLayout

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -30,12 +30,12 @@ import "../styles/global.css";
     color: var(--eggshell);
 
     transition: 0.4s;
-    margin-top: 20px;
-    padding: 10px 20px;
+    margin: 2rem;
+    padding: 1rem 2rem;
   }
   .card:hover {
     background-color: var(--eerie-black-card-hover);
-    padding-left: 30px;
+    padding-left: 2.5rem;
     
   }
 </style>
