--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -31,7 +31,7 @@ const { pageTitle } = Astro.props;
   }
   div {
     max-width: 50%;
-    margin: 0 auto;
-    
+    margin: 4rem auto;
+    padding: 2rem;
   }
 </style>
