added skull homie!

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,6 +3,7 @@ import Nav from "./Nav.astro";
 ---
 
 <div>
+  <img src="/skull-2.png" alt="">
   <Nav />
 </div>
 
@@ -15,6 +16,10 @@ import Nav from "./Nav.astro";
     font-weight: 900;
     display: flex;
     justify-content: center;
-    padding: 3rem;
+    padding: 1rem 3rem;
+  }
+  img{
+   height: 150px;
+  
   }
 </style>
