converted root font size and adjusted all rem

--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -26,12 +26,12 @@ const { pageTitle } = Astro.props;
 
 <style>
   body{
-    border:5px solid var(--spanish-gray);
+    border:.7rem solid var(--spanish-gray);
     margin: 4rem;
   }
   div {
     max-width: 50%;
     margin: 4rem auto;
-    padding: 2rem;
+    padding: 3rem;
   }
 </style>
