--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -25,17 +25,17 @@ import "../styles/global.css";
     text-decoration: none;
   }
   .card {
-    border-radius: 6px;
+    border-radius: .6rem;
     background-color: var(--eerie-black-card);
     color: var(--eggshell);
 
     transition: 0.4s;
     margin: 2rem;
-    padding: 1rem 2rem;
+    padding: 2rem 3rem;
   }
   .card:hover {
     background-color: var(--eerie-black-card-hover);
-    padding-left: 2.5rem;
+    padding-left: 4rem;
     
   }
 </style>
