--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -9,17 +9,16 @@ import Nav from "./Nav.astro";
 
 <style>
   div {
-    border-bottom: 5px solid var(--spanish-gray);
+    border-bottom: .7rem solid var(--spanish-gray);
     width: 100%;
-    font-size: 3rem;
+    font-size: 5rem;
     font-style: oblique;
     font-weight: 900;
     display: flex;
     justify-content: center;
-    padding: 1rem 3rem;
+    padding: 2rem 5rem;
   }
   img{
-   height: 150px;
-  
+   height: 15rem;
   }
 </style>
