--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,12 +8,12 @@ import Socials from "./Socials.astro";
 
 <style>
   div {
-    border-top: 5px solid var(--spanish-gray);
-    font-size: 1.5rem;
+    border-top: .7rem solid var(--spanish-gray);
+    font-size: 2.4rem;
     font-style: oblique;
     font-weight: 900;
     display: flex;
     justify-content: center;
-    padding: 2rem;
+    padding: 3rem;
   }
 </style>
