--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,7 +2,7 @@
 import Nav from "./Nav.astro";
 ---
 
-<div>
+<div class="header">
   <img src="/skull-2.png" alt="">
   <Nav />
 </div>
@@ -11,9 +11,6 @@ import Nav from "./Nav.astro";
   div {
     border-bottom: .7rem solid var(--spanish-gray);
     width: 100%;
-    font-size: 5rem;
-    font-style: oblique;
-    font-weight: 900;
     display: flex;
     justify-content: center;
     padding: 2rem 5rem;
