--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -5,21 +5,21 @@
   font-weight: 200 900;
   font-stretch: 75% 125%;
 }
-html{
+html {
   font-size: 62.5%;
 }
-:root{
+:root {
   /* CSS HEX */
---eerie-black: #1E201Dff;
---eggshell: #EFE9D7ff;
---spanish-gray: #999791ff;
+  --eerie-black: #1e201dff;
+  --eggshell: #efe9d7ff;
+  --spanish-gray: #999791ff;
 
-/* alts  */
---spanish-gray-hover: #787771;
---eerie-black-card: #2c2f2a;
---eerie-black-card-hover:#272b26 ;
+  /* alts  */
+  --spanish-gray-hover: #787771;
+  --eerie-black-card: #2c2f2a;
+  --eerie-black-card-hover: #272b26;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -31,11 +31,8 @@ body {
   color: var(--eggshell);
 }
 
-
-a{
-
-  transition: .2s;
-  
+a {
+  transition: 0.2s;
 }
 a:link {
   color: var(--eggshell);
@@ -46,13 +43,26 @@ a:visited {
 }
 a:hover {
   color: var(--spanish-gray-hover);
-  
-  
 }
-
 
 li {
   list-style: none;
 }
 
+@media screen and (max-width: 820px) {
+  .nav-links {
+    font-size: 3rem;
+    margin-left: 0;
+  }
+  .nav-links-container {
+    justify-content: space-between;
+  }
+  .header {
+    flex-direction: column;
+    align-items: center;
+  }
 
+  .main {
+    padding: 0 15rem;
+  }
+}
