--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -3,7 +3,9 @@ import Nav from "./Nav.astro";
 ---
 
 <div class="header">
-  <img src="/skull-2.png" alt="">
+  <a href="/"><img src="/skull-2.png" alt="cute lil skull homie"></a>
+  
+ 
   <Nav />
 </div>
 
@@ -17,5 +19,6 @@ import Nav from "./Nav.astro";
   }
   img{
    height: 15rem;
+ 
   }
 </style>
