created spacing for text and max width for main

--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -32,6 +32,7 @@ const { pageTitle } = Astro.props;
   main {
     margin: 4rem auto;
     padding: 0 20rem;
+    max-width: 120rem;
     min-height: 45vh;
   }
 </style>
