--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -48,6 +48,25 @@ a:hover {
 li {
   list-style: none;
 }
+/* FONT SIZES */
+/*  */
+h1{font-size: 4.8rem;}
+h2{
+  font-size: 2.8rem;
+  margin-top:2rem;
+}
+h3{
+  font-size: 2rem;
+}
+p{
+  font-size: 1.8rem;
+  line-height: 1.6;
+  margin-top: 2rem;
+}
+.post-date{
+  font-size: 1.6rem;
+  
+}
 
 @media screen and (max-width: 820px) {
   .nav-links {
