made first post, styled list, css becoming crazy

--- a/src/Layouts/BaseLayout.astro
+++ b/src/Layouts/BaseLayout.astro
@@ -27,12 +27,19 @@ const { pageTitle } = Astro.props;
 <style>
   body {
     border: 0.7rem solid var(--spanish-gray);
-    margin: 2rem;  
+    margin: 2rem;
   }
+
   main {
     margin: 4rem auto;
     padding: 0 20rem;
     max-width: 120rem;
     min-height: 45vh;
   }
+  
+li {
+  font-size: 2rem;
+  padding-left: 1rem;
+}
+  
 </style>
