--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -16,9 +16,13 @@ import "../styles/global.css";
 
 <!-- styles  -->
 <style>
+  li{
+    list-style: none;
+    margin:none;
+  }
   p{
     margin-top: 1rem;
-    
+
   }
   a {
     text-decoration: none;
