--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,8 @@ const pageTitle = "Home";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
-  <h2>WELCOME!</h2>
-  <p>hello, this is ya home! </p>
-  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio maiores magnam molestiae ab vero odio sed voluptatibus ea, neque recusandae in odit expedita aut deserunt, vitae tempora? Facere labore veniam eos consequuntur sint qui magnam nesciunt temporibus! Nisi ad ab placeat iure tenetur maxime possimus saepe ipsum obcaecati ea consequuntur corporis soluta laborum, excepturi tempora sit natus commodi provident quod architecto eaque quibusdam. Similique tempora distinctio error voluptatum iusto maiores doloremque veritatis corporis consequuntur facere vel fugiat porro voluptatem, repellendus itaque inventore necessitatibus nobis dolor ipsa minus repudiandae harum maxime non! Reiciendis architecto quia necessitatibus. Illum ipsa illo esse maxime.</p>
+  <h2>HELLO!</h2>
+  <p>This is the home page! </p>
+  <p>I made this!</p>
+  <p>** Please ignore all text formatting, still workin on it! **  </p>
 </BaseLayout>
