just a note on blog page

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -7,6 +7,7 @@ const pageTitle = "Blog";
 ---
 
 <BaseLayout pageTitle={pageTitle}>
+  <h3>Warning: this page is F'd on mobile!</h3>
   <p>Here you'll find links to each post:</p>
   <div class="post-lists" >
     <ul>
