--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,59 +1,34 @@
 ---
-import BaseLayout from "../Layouts/BaseLayout.astro";
-import BlogCard from "../components/BlogCard.astro";
-const codePosts = await Astro.glob("../pages/posts/*.md");
-const illustrationPosts = await Astro.glob("../pages/posts-illustration/*.md");
-const pageTitle = "Blog";
+import BaseLayout from '../Layouts/BaseLayout.astro'
+import BlogList from '../components/BlogList.astro'
+const codePosts = await Astro.glob('../pages/posts/*.md')
+const illustrationPosts = await Astro.glob('../pages/posts-illustration/*.md')
+const pageTitle = 'Blog'
 ---
 
 <BaseLayout pageTitle={pageTitle}>
   <h3>Warning: this page is F'd on mobile!</h3>
   <p>Here you'll find links to each post:</p>
-  <div class="post-lists" >
-    <ul>
-      <h2>Coding Posts</h2>
-      {
-        codePosts.map((post) => (
-          <BlogCard
-            url={post.url}
-            title={post.frontmatter.title}
-            pubDate={post.frontmatter.pubDate}
-            description={post.frontmatter.description}
-          />
-        ))
-      }
-    </ul>
-
-    <ul>
-      <h2>Illustration posts</h2>
-      {
-        illustrationPosts.map((post) => (
-          <BlogCard
-            url={post.url}
-            title={post.frontmatter.title}
-            pubDate={post.frontmatter.pubDate}
-            description={post.frontmatter.description}
-          />
-        ))
-      }
-    </ul>
+  <div class='post-lists'>
+    <!-- List of coding posts -->
+    <BlogList title='Coding Posts' list={codePosts} />
+    <!-- List of illustration posts -->
+    <BlogList title='Illustration posts' list={illustrationPosts} />
   </div>
 </BaseLayout>
-
 
 <!-- not sure if  -is:global-  is best practice here, but it successfully targets the main padding without affecting the other pages-->
 <style is:global>
   .main {
     padding: 0;
   }
-  .post-lists{
+  .post-lists {
     display: grid;
-    grid-template-columns: 1fr 1fr;
     gap: 2rem;
   }
-
-  ul {
-    display: flex;
-    flex-direction: column;
+  @media screen and (min-width: 821px) {
+    .post-lists {
+      grid-template-columns: 1fr 1fr;
+    }
   }
 </style>
